--- a/aluminaald.tex
+++ b/aluminaald.tex
@@ -35,4 +35,4 @@ Dafür wurden die Precursoren im Einzelnen per Molekulardynamik simuliert und an
 
 \subsection{Vollständige ALD-Simulationen}
 
-\todo[inline]{Erläutern, warum es vermutlich noch nicht geht}
+\todo[inline]{Erklären, warum es vermutlich noch nicht geht}
