--- a/contents.tex
+++ b/contents.tex
@@ -73,7 +73,7 @@ MOSFET     &   Metal Oxide Field Effect Transistor       &       Metalloxid-Feld
 MPI        &   Message Passing Interface                 &       eine Kommunikationsschnittstelle       \\
 PVD        &   Physical Vapor Deposition                 &       Physikalische Gasphasenabscheidung     \\
 RDF        &   Radial Distribution Function              &       Radiale Verteilungsfunktion            \\
-ReaxFF     &   Reactive Force Fields                     &       Reaktive Kraftfelter                   \\
+ReaxFF     &   Reactive Force Fields                     &       Reaktive Kraftfelder                   \\
 RMS        &   Root Mean Square                          &       Standardabweichung                     \\
 TMA        &   Trimethylaluminum (\ce{Al(CH3)3})         &       Trimethylaluminium (\ce{Al(CH3)3})     \\
 
