--- a/copperpvd.tex
+++ b/copperpvd.tex
@@ -127,7 +127,7 @@ Bereits nach wenigen Oberflächenereignissen nimmt die Abbruchrate ab, was auf e
 Die kritische Bedeckung dafür liegt zwischen \SI{0.034}{\per\nano\meter\squared} und \SI{0.074}{\per\nano\meter\squared} und deckt sich somit mit der maximalen MD-Ereignisdichte von \SI{0.073}{\per\nano\meter\squared}.
 Das deutet darauf hin, dass perfekte Gitterkonfigurationen nicht robust gegenüber gerichteten Energieeinträgen ist, kleine Störungen des Gitters aber zur gleichmäßigeren Verteilung der eingebrachten Energien führen.
 
-Im weiteren Verlauf der Simulation variiert die Abbruchquote unterhalb von \SI{2}{\percent} (Abbildung \ref{fig:copperparsivald-a}).
+Im weiteren Verlauf der Simulation variiert die Abbruchrate unterhalb von \SI{2}{\percent} (Abbildung \ref{fig:copperparsivald-a}).
 Sie korreliert augenscheinlich mit der RMS-Rauheit (Abbildung \ref{fig:copperparsivald-c}), die durch Oberflächenunebenheiten auf der Nanometer-Skala dominiert wird.
 Mit einem nahezu konstanten RMS-Wert um \SI{1}{\angstrom} sind die gewachsenen Schichten durchgehend glatt, mit Ausnahme einzelner Simulationen.
 
