--- a/einleitung.tex
+++ b/einleitung.tex
@@ -8,8 +8,8 @@
 \todo[inline]{Diffusionsbarrieren}
 \todo[inline]{Hauptsächlich experimentelle Aussagen}
 \todo[inline]{DFT: zu klein, nur einzelne Atome}
-\todo[inline]{MD:immer noch auf atomistischer Skala}
-\todo[inline]{KMC: Gitterbasiert}
+\todo[inline]{MD: immer noch auf atomistischer Skala}
+\todo[inline]{KMC: gitterbasiert}
 \todo[inline]{Raten-/GPC-Vorhersagen}
 \todo[inline]{ungesättigte Zyklen}
 \todo[inline]{Substrateinfluss}
