--- a/goldpvd.tex
+++ b/goldpvd.tex
@@ -32,6 +32,7 @@ Die Parametrisierung repräsentiert somit das Zielsystem.
 %% \todo[inline]{Oberflächenvalidierung}
 
 \subsection{Thermodynamische Eigenschaften}
+\label{goldthermo}
 
 Neben strukturellen Eigenschaften bilden EAM-Potentiale auch einige thermodynamische Eigenschaften von Metallen ab.
 Für deren Untersuchung wurde die Massendichte in Abhängigkeit der Temperatur für die Teststruktur aufgenommen, die langsam auf \SI{2000}{\kelvin}, also weit über den Schmelzpunkt von \SI{1337}{\kelvin}, aufgeheizt wurde.
@@ -67,7 +68,7 @@ Damit ergeben sich Reaktionsräume der Größe \SI{37x37x25}{\angstrom} mit jewe
 Abbildung \ref{fig:golddepositions-a} zeigt, wie das Substrat unter Erhalt der Kristallstruktur fortgesetzt wird.
 Poren und Einschlüsse wurden durch Untersuchung der Alphastruktur nicht gefunden.
 Abbildung \ref{fig:goldroughness-a} stellt die Rauheit dar, die beim glatten Substrat über den Abscheidungszeitraum konstant geblieben ist.
-Fehler- und Abbruchsquoten bei den LAMMPS-Berechnungen lagen mit \SI{0.25}{\percent} unterhalb des aus den ALD-Prozessen der Bachelorarbeit erwarteten Wertes von \SI{5}{\percent}
+Fehler- und Abbruchraten bei den LAMMPS-Berechnungen lagen mit \SI{0.25}{\percent} unterhalb des aus den ALD-Prozessen der Bachelorarbeit erwarteten Wertes von \SI{5}{\percent}
 
 \subsubsection{Wachstum auf strukturierten Substraten}
 
