--- a/mdtests.tex
+++ b/mdtests.tex
@@ -27,6 +27,6 @@ Diese Tests sind in Tabelle \ref{tab:mdtestvariants} dargestellt.
     Parsivald-Simulation & Komplette Abscheidungs-Simulation mit Parsivald & Anwendbarkeit \\
     \hline
   \end{tabularx}
-  \caption[asd]{dsa mit LAMMPS, Präparation mit Materials Studio}
+  \caption[asd]{asd mit LAMMPS, Präparation mit Materials Studio}
   \label{tab:mdtestvariants}
 \end{table}
