--- a/packages.tex
+++ b/packages.tex
@@ -56,6 +56,6 @@
         stretch=10,
         shrink=10
 ]{microtype}
-\usepackage[range-phrase={\,bis\,},binary-units]{siunitx}
+\usepackage[range-phrase={\,bis\,},binary-units,retain-explicit-plus]{siunitx}
 
 \usepackage{mhchem}
