--- a/present.tex
+++ b/present.tex
@@ -2,9 +2,9 @@
 
 \subsection{Reine KMC-Simulationen}
 
-dwivedi
+Dwivedi
 
-mazaleyrat
+Mazaleyrat
 
 Zagros (Stamatakis)
 
@@ -26,7 +26,7 @@ Refs
 
 \subsection{Zielsetzung für Parsivald}
 
-- feature scale (micrometer-scale)
+- Feature Scale (Mikrometer-Skala)
 
 - MD-Genauigkeit
 
