--- a/depositions.tex
+++ b/depositions.tex
@@ -86,7 +86,7 @@ Tabellen \ref{tab:deposition-comparison} und \ref{tab:deposition-materials} stel
 
 PVD ist kontinuierlich und nicht reaktiv, arbeitet also mit Atomen oder Molekülen, die physikalisch auf der Oberfläche adsorbieren.
 Beispielsweise werden beim Sputtering durch energiereiche Partikel (Argon-Plasma) einzelne Atome aus dem sogenannten Target geschlagen, die dann auf dem Substrat eine homogene, dünne Schicht bilden.
-Durch die Nutzung mehrerer Targets (Co\-sputtering) oder mehrerer Atomsorten in einem Target lassen sich auch Legierungen und andere \todo{wort!}mehrelementige Materialien abscheiden.
+Durch die Nutzung mehrerer Targets (Co\-sputtering) oder mehrerer Atomsorten in einem Target lassen sich auch Legierungen und andere \todo{Wort!}mehrelementige Materialien abscheiden.
 \todo{Referenzen für alles}
 
 \subsection{Chemische Gasphasenabscheidung}
@@ -109,7 +109,7 @@ Dies beinhaltet Stufen, Rillen und anderweitig strukturierte Substrate ebenso wi
   \centering
   \def\svgwidth{\textwidth}
   \input{img/ald-schema.pdf_tex}
-  \caption[ALD-Schema]{ALD-Schema: dsa ald}
+  \caption[ALD-Schema]{ALD-Schema: asd ald}
   \label{fig:ald-schema}
 \end{figure}
 
